# Insrob

./: README.md
script/: Basecontrol-test.sh  Debug.sh  Get_data.sh  build.sh  install-code.sh  joycontorl.sh  kill.sh  run-test.sh  server-test.sh
src/Base_control/: CMakeLists.txt  package.xml
src/Base_control/include/Base_control/: UART.h
src/Base_control/msg/: Insrobpose.msg  Motorfeedback.msg
src/Base_control/src/: Client1.cpp  Service.cpp  UART.cpp
src/Base_control/srv/: ControlCmd.srv
src/Insrob_server/: CMakeLists.txt  package.xml
src/Insrob_server/include/Insrob_server/: global.h  vsocket.h
src/Insrob_server/src/: client.cpp  speedtransform.cpp  vsocket.cpp
src/Show_GPS/: CMakeLists.txt  package.xml  readme.txt
src/Show_GPS/src/: main.cpp
src/gps_pub/: CMakeLists.txt  package.xml  readme.txt
src/gps_pub/msg/: imu_gps.msg
src/gps_pub/src/: gps_pub_node.cpp  gps_pub_node.cpp 55555  gps_pub_node.cpp.Version1  gps_pub_node.cpp.Version2  gps_pub_node.cpp.Version3  gps_pub_node.cpp.Version4  gps_pub_node.cpp5555  serialPort.cpp1111
src/gps_pub/src/include/: protocol.h  serialPort.h  serial_port.h
src/joyrecv/: CMakeLists.txt  package.xml  readme.txt
src/joyrecv/src/: main.cpp
src/local_map/: CMakeLists.txt  package.xml
src/local_map/include/local_map/: data_init.h  grid_feature.h  io.h  map_builder.h  obstacle.h  obstacle_classification.h  obstacle_distance.h  obstacle_hungarian.h  obstacle_kaman.h  obstacle_segmentation.h  obstacle_view.h  parameter.h  point.h  road_boundary.h
src/local_map/src/: data_init.cpp  grid_feature.cpp  io.cpp  main.cpp  map_builder.cpp  obstacle.cpp  obstacle_classification.cpp  obstacle_distance.cpp  obstacle_hungarian.cpp  obstacle_kaman.cpp  obstacle_segmentation.cpp  obstacle_view.cpp  road_boundary.cpp
src/path_planner/: CMakeLists.txt  package.xml
src/path_planner/include/path_planner/: computetool.h  global_path.h
src/path_planner/src/: Bspline_Mtrajfinder.cpp  computetool.cpp  global_path.cpp  main.cpp
src/rslidar/: readme.txt
src/rslidar_pointcloud/data/: angle.csv
src/rslidar_pointcloud/data/rs_lidar_16/: angle.csv  curves.csv
src/server/: CMakeLists.txt  package.xml
src/server/include/server/: VSocket.h  VSocketCMD.h  vfileoperation.h  vpoint.h  vpose.h
src/server/src/: VSocket.cpp  server.cpp  vfileoperation.cpp
src/server/srv/: filename.srv
src/slam_algorithm/: CMakeLists.txt  algorithm_hand.launch  package.xml  代码整理.docx
src/slam_algorithm/src/: mapping.cpp  odom.cpp  register.cpp
src/transform_data/: CMakeLists.txt  package.xml  readme.txt
src/transform_data/src/: transform_data.cpp
