<?xml version="1.0"?>
<package>
  <name>gps_pub</name>
  <version>0.0.1</version>
  <description>The gps_pub package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/serial_pack</url>
  <author email="jane.doe@example.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
