<package>
	<name>local_map</name>
	<version>0.0.0</version>
	<description>
        	local_map
	</description>
	<maintainer email="example@163.com">ds</maintainer>
	<license>BSD</license>
	<author>ds</author>
	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>	
	<build_depend>pcl_ros</build_depend>
	<build_depend>message_generation</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>pcl_ros</run_depend>
	<run_depend>message_runtime</run_depend>

</package>
